--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
-Add login/signup support
-update login page
+Add login/signup support DONE
+update login page DONE
+add favorited languages to accounts
+add saved conversation to accounts
 adjust main page ui (move faq, login)
 cache previous chat messages
 add actual ai powered chat messages
